@@ -2,36 +2,46 @@ package com.springboot.MyTodoList.config;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
 
-
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
-/*
-    This class configures CORS, and specifies which methods are allowed
-    along with which origins and headers
-    @author: peter.song@oracle.com
 
+/**
+ * Configuración CORS que puede ser ajustada mediante variables de entorno
  */
 @Configuration
 public class CorsConfig {
     Logger logger = LoggerFactory.getLogger(CorsConfig.class);
-    public CorsFilter corsFilter(){
+    
+    @Value("${cors.allowed-origins:*}")
+    private String allowedOrigins;
+    
+    @Bean
+    public CorsFilter corsFilter() {
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(List.of("http://localhost:3000","https://objectstorage.us-phoenix-1.oraclecloud.com",
-                "https://petstore.swagger.io"));
-        config.setAllowedMethods(List.of("GET","POST","PUT","OPTIONS","DELETE","PATCH"));
-        config.setAllowedOrigins(Collections.singletonList("*"));
+        
+        // Procesar orígenes permitidos desde la variable de entorno o usar valor por defecto
+        if ("*".equals(allowedOrigins)) {
+            config.setAllowedOrigins(Collections.singletonList("*"));
+        } else {
+            config.setAllowedOrigins(Arrays.asList(allowedOrigins.split(",")));
+        }
+        
+        // Configurar métodos y cabeceras permitidos
+        config.setAllowedMethods(List.of("GET", "POST", "PUT", "OPTIONS", "DELETE", "PATCH"));
         config.addAllowedHeader("*");
         config.addExposedHeader("location");
+        
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
-        CorsFilter filter = new CorsFilter(source);
-        return filter;
+        
+        return new CorsFilter(source);
     }
-
 }
